# Aozora-Re

./: .gitmodules  CMakeLists.txt  README.md
assets/assets/script/: STAGE_10001.json
assets/assets/ui/font/: AdobeFnt24.lst  AozoraFont.ttc
include/Aozora/: Aozora.hpp
include/Aozora/Stage/: MainStage.hpp  PreloadStage.hpp
include/OpenCore/: OpenCore.hpp
include/OpenCore/Core/: Macros.hpp
note/: OpenCore Documentation.md
project/: Aozora.cpp
resources/: resource.rc
src/: Aozora.cpp
src/AozoraSrc/: Aozora.cpp
src/AozoraSrc/Stage/: MainStage.cpp  PreloadStage.cpp
src/OpenCoreSrc/: GraphicsManager.cpp  ImageBoard.cpp
src/Stage/: MainStage.cpp  PreloadStage.cpp
